--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -11,15 +11,30 @@
     </div>
 
     <!--Show Tasks--------------------------------------------------------------------->
-    <table class="show">
+    <div *ngIf="elements==0; else exist"> You have no tasks :) </div>
+    <ng-template #exist>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Created At</th>
+                <th scope="col">Task</th>
+                <th scope="col">Operation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let x of items; let index = index;">
+                <th scope="row">{{index+1}}</th>
+                <td>{{x.created_at}}</td>
+                <td>
+                    {{x.task}}
+                </td>
+                <td>
+                    <input (click)="deleteTask(index)" type="button" value="Delete" class=" btn btn-danger">
+                </td>
+            </tr>
 
-        <tr *ngFor="let x of items; let index = index;">
-            <td class="message">
-                <div class="col-9 text-light h3">{{x}}</div>
-            </td>
-            <td><input (click)="deleteTask(index)" type="button" value="Delete" class="col-2 btn btn-danger">
-            </td>
-        </tr>
-
+        </tbody>
     </table>
+</ng-template>
 </div>
